--- a/workspace/package.json
+++ b/workspace/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
+    "mocha": "^3.5.0",
     "request": "^2.81.0",
+    "should": "^12.0.0",
     "socket.io": "~0.9.14"
   }
 }
